--- a/admin/i18n/de/translations.json
+++ b/admin/i18n/de/translations.json
@@ -1,12 +1,12 @@
 {
     "Found %s devices. Added %s new devices.": "%s Geräte gefunden. %s neue Geräte hinzugefügt.",
-    "Found %s devices. Nothing new.": "%s Geräte gefunden. Es wurden keine neuen Geräte hinzugefügt.",
+    "Found %s devices. Nothing new.": "%s Geräte gefunden. Es wurde kein neues Gerät hinzugefügt.",
     "IP": "IP",
     "Name": "Name",
     "No devices found": "Keine Geräte gefunden",
     "Password": "Passwort",
     "Scan devices": "Nach Geräten suchen",
-    "The scan can last over one minute or even longer. Be patient...": "Die Suche kann länger als eine Minute dauern. Bitte geduldig sein …",
-    "The scan will take approx 5s ...": "Der Scan dauert ungefähr 5 Sekunden …",
+    "The scan can last over one minute or even longer. Be patient...": "Der Scan kann über eine Minute oder sogar länger dauern. Bitte haben Sie Geduld ...",
+    "The scan will take approx 5s ...": "Der Scanvorgang dauert ca. 5 Sekunden ...",
     "Username": "Benutzername"
 }
