--- a/admin/i18n/pl/translations.json
+++ b/admin/i18n/pl/translations.json
@@ -1,12 +1,12 @@
 {
-    "Found %s devices. Added %s new devices.": "Znaleziono urządzenia %s. Dodano %s nowych urządzeń.",
-    "Found %s devices. Nothing new.": "Znaleziono urządzenia %s. Nic nowego.",
+    "Found %s devices. Added %s new devices.": "Znaleziono %s urządzeń. Dodano %s nowych urządzeń.",
+    "Found %s devices. Nothing new.": "Znaleziono %s urządzeń. Nie dodano żadnego nowego urządzenia.",
     "IP": "IP",
     "Name": "Nazwa",
-    "No devices found": "Nie znaleziono urządzeń",
+    "No devices found": "Nie znaleziono żadnych urządzeń",
     "Password": "Hasło",
-    "Scan devices": "Skanuj urządzenia",
-    "The scan can last over one minute or even longer. Be patient...": "Skanowanie może trwać ponad minutę lub nawet dłużej. Bądź cierpliwy...",
-    "The scan will take approx 5s ...": "Skanowanie zajmie około 5 sekund ...",
-    "Username": "Nazwa Użytkownika"
+    "Scan devices": "Skanowanie w poszukiwaniu urządzeń",
+    "The scan can last over one minute or even longer. Be patient...": "Skanowanie może trwać ponad minutę lub nawet dłużej. Prosimy o cierpliwość ...",
+    "The scan will take approx 5s ...": "Skanowanie potrwa około 5 sekund ....",
+    "Username": "Nazwa użytkownika"
 }
